# goodreads-rs

./: .gitignore  Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: api_fetch.rs  data_structures.rs  lib.rs  utils.rs
src/goodreads_remote/: mod.rs  remotes.rs
