[package]
name = "goodreads-rs"
version = "0.1.0"
authors = ["etoledom <etoledom@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3.1"
percent-encoding = "2.1.0"
